--- a/arch/arm/src/stm32h7/Kconfig
+++ b/arch/arm/src/stm32h7/Kconfig
@@ -17,6 +17,8 @@ config ARCH_CHIP_STM32H743AG
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_G
 	select STM32H7_IO_CONFIG_A
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 1024 Kb FLASH, 1024K Kb SRAM,
 		UFBGA169
@@ -35,6 +37,8 @@ config ARCH_CHIP_STM32H743BG
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_G
 	select STM32H7_IO_CONFIG_B
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 1024 Kb FLASH, 1024K Kb SRAM,
 		LQFP208
@@ -44,6 +48,8 @@ config ARCH_CHIP_STM32H743BI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_B
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		LQFP208
@@ -53,6 +59,8 @@ config ARCH_CHIP_STM32H743IG
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_G
 	select STM32H7_IO_CONFIG_I
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 1024 Kb FLASH, 1024K Kb SRAM,
 		LQFP176 or UFBGA176
@@ -62,6 +70,8 @@ config ARCH_CHIP_STM32H743II
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_I
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		LQFP176 or UFBGA176
@@ -71,6 +81,8 @@ config ARCH_CHIP_STM32H743VG
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_G
 	select STM32H7_IO_CONFIG_V
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 1024 Kb FLASH, 1024K Kb SRAM,
 		LQFP100 or TFBGA100
@@ -80,6 +92,8 @@ config ARCH_CHIP_STM32H743VI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_V
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		LQFP100 or TFBGA100
@@ -89,6 +103,8 @@ config ARCH_CHIP_STM32H743XG
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_G
 	select STM32H7_IO_CONFIG_X
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 1024 Kb FLASH, 1024K Kb SRAM,
 		TFBGA240
@@ -98,6 +114,8 @@ config ARCH_CHIP_STM32H743XI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_X
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		TFBGA240
@@ -107,6 +125,8 @@ config ARCH_CHIP_STM32H743ZG
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_G
 	select STM32H7_IO_CONFIG_Z
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 1024 Kb FLASH, 1024K Kb SRAM,
 		LQFP144
@@ -116,6 +136,8 @@ config ARCH_CHIP_STM32H743ZI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_Z
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		LQFP144
@@ -125,6 +147,8 @@ config ARCH_CHIP_STM32H747XI
 	select STM32H7_STM32H7X7XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_X
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		Dual core STM32 H7 Cortex M7+M4, 2048 Kb FLASH, 1024K Kb SRAM
 		TFBGA240
@@ -134,6 +158,8 @@ config ARCH_CHIP_STM32H753AI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_A
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		with cryptographic accelerator, UFBGA169
@@ -152,6 +178,8 @@ config ARCH_CHIP_STM32H753II
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_I
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		with cryptographic accelerator, LQFP176/UFBGA176
@@ -161,6 +189,8 @@ config ARCH_CHIP_STM32H753VI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_V
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		with cryptographic accelerator, LQFP100/TFBGA100
@@ -179,6 +209,8 @@ config ARCH_CHIP_STM32H753ZI
 	select STM32H7_STM32H7X3XX
 	select STM32H7_FLASH_CONFIG_I
 	select STM32H7_IO_CONFIG_Z
+	select STM32H7_HAVE_FDCAN1
+	select STM32H7_HAVE_FDCAN2
 	---help---
 		STM32 H7 Cortex M7, 2048 Kb FLASH, 1024K Kb SRAM,
 		with cryptographic accelerator, LQFP144
@@ -373,6 +405,14 @@ config STM32H7_HAVE_SPI6
 	bool
 	default n
 
+config STM32H7_HAVE_FDCAN1
+	bool
+	default n
+
+config STM32H7_HAVE_FDCAN2
+	bool
+	default n
+
 # These "hidden" settings are the OR of individual peripheral selections
 # indicating that the general capability is required.
 
@@ -380,8 +420,9 @@ config STM32H7_ADC
 	bool
 	default n
 
-config STM32H7_CAN
+config STM32H7_FDCAN
 	bool
+	select NET_CAN_HAVE_CANFD
 	default n
 
 config STM32H7_DAC
@@ -573,6 +614,20 @@ config STM32H7_WWDG
 	bool "WWDG"
 	default n
 	select WATCHDOG
+
+config STM32H7_FDCAN1
+	bool "FDCAN1"
+	select STM32H7_FDCAN
+	select NET_CAN_HAVE_TX_DEADLINE
+	default n
+	depends on STM32H7_HAVE_FDCAN1
+
+config STM32H7_FDCAN2
+	bool "FDCAN2"
+	select STM32H7_FDCAN
+	select NET_CAN_HAVE_TX_DEADLINE
+	default n
+	depends on STM32H7_HAVE_FDCAN2
 
 menu "STM32H7 I2C Selection"
 
@@ -5313,6 +5368,48 @@ config STM32H7_QENCODER_SAMPLE_EVENT_8
 
 endchoice
 
-endmenu
+endmenu # QEncoder Driver
+
+
+menu "FDCAN1 Configuration"
+	depends on STM32H7_FDCAN1
+
+config FDCAN1_BITRATE
+	int "CAN bitrate"
+	depends on !NET_CAN_CANFD
+	default 1000000
+
+config FDCAN1_ARBI_BITRATE
+	int "CAN FD Arbitration phase bitrate"
+	depends on NET_CAN_CANFD
+	default 1000000
+
+config FDCAN1_DATA_BITRATE
+	int "CAN FD Data phase bitrate"
+	depends on NET_CAN_CANFD
+	default 4000000
+
+endmenu # STM32H7_FDCAN1
+
+menu "FDCAN2 Configuration"
+	depends on STM32H7_FDCAN2
+
+config FDCAN2_BITRATE
+	int "CAN bitrate"
+	depends on !NET_CAN_CANFD
+	default 1000000
+
+config FDCAN2_ARBI_BITRATE
+	int "CAN FD Arbitration phase bitrate"
+	depends on NET_CAN_CANFD
+	default 1000000
+
+config FDCAN2_DATA_BITRATE
+	int "CAN FD Data phase bitrate"
+	depends on NET_CAN_CANFD
+	default 4000000
+
+endmenu # STM32H7_FDCAN2
+
 
 endif # ARCH_CHIP_STM32H7
