--- a/arch/arm/src/stm32/Kconfig
+++ b/arch/arm/src/stm32/Kconfig
@@ -2766,14 +2766,12 @@ config STM32_BKPSRAM
 config STM32_CAN1
 	bool "CAN1"
 	default n
-	select CAN
 	select STM32_CAN
 	depends on STM32_HAVE_CAN1
 
 config STM32_CAN2
 	bool "CAN2"
 	default n
-	select CAN
 	select STM32_CAN
 	depends on STM32_HAVE_CAN2
 
@@ -3367,7 +3365,6 @@ config STM32_CAN
 
 config STM32_FDCAN
 	bool
-	select ARCH_HAVE_CAN_ERRORS
 
 config STM32_TIM
 	bool
@@ -10668,6 +10665,7 @@ choice
 config STM32_CAN_CHARDRIVER
 	bool "STM32 CAN character driver support"
 	select ARCH_HAVE_CAN_ERRORS
+	select CAN
 
 config STM32_CAN_SOCKET
 	bool "STM32 CAN SocketCAN support"
@@ -10720,11 +10718,12 @@ choice
 
 config STM32_FDCAN_CHARDRIVER
 	bool "STM32 FDCAN character driver support"
-	select ARCH_HAVE_FDCAN_ERRORS
+	select ARCH_HAVE_CAN_ERRORS
+	select CAN
 
 config STM32_FDCAN_SOCKET
-	bool "STM32 FDCAN SocketCAN support (not supported yet)"
-	select NET_FDCAN_HAVE_ERRORS
+	bool "STM32 FDCAN SocketCAN support"
+	select NET_CAN_HAVE_ERRORS
 
 endchoice # FDCAN character driver or SocketCAN support
 
