--- a/arch/arm/src/stm32h7/Kconfig
+++ b/arch/arm/src/stm32h7/Kconfig
@@ -423,6 +423,8 @@ config STM32H7_ADC
 config STM32H7_FDCAN
 	bool
 	select NET_CAN_HAVE_CANFD
+	select NET_CAN_EXTID
+	select NET_CAN_HAVE_TX_DEADLINE
 	default n
 
 config STM32H7_DAC
@@ -618,14 +620,12 @@ config STM32H7_WWDG
 config STM32H7_FDCAN1
 	bool "FDCAN1"
 	select STM32H7_FDCAN
-	select NET_CAN_HAVE_TX_DEADLINE
 	default n
 	depends on STM32H7_HAVE_FDCAN1
 
 config STM32H7_FDCAN2
 	bool "FDCAN2"
 	select STM32H7_FDCAN
-	select NET_CAN_HAVE_TX_DEADLINE
 	default n
 	depends on STM32H7_HAVE_FDCAN2
 
@@ -5370,6 +5370,8 @@ endchoice
 
 endmenu # QEncoder Driver
 
+menu "FDCAN Driver Configuration"
+	depends on STM32H7_FDCAN1 || STM32H7_FDCAN2
 
 menu "FDCAN1 Configuration"
 	depends on STM32H7_FDCAN1
@@ -5410,6 +5412,50 @@ config FDCAN2_DATA_BITRATE
 	default 4000000
 
 endmenu # STM32H7_FDCAN2
+
+config CONFIG_STM32H7_FDCAN_REGDEBUG
+	bool "Enable register dump debugging"
+	depends on DEBUG_CAN_INFO
+	depends on DEBUG_NET_INFO
+	default n
+	---help---
+		Output detailed register-level CAN device debug information.
+		Requires also CONFIG_DEBUG_CAN_INFO and CONFIG_DEBUG_NET_INFO.
+
+config STM32H7_FDCAN_LOOPBACK
+	bool "Enable FDCAN loopback mode"
+	default n
+	---help---
+		Enable the FDCAN local loopback mode for testing purposes.
+		TODO: Enable separately for FDCAN1 and FDCAN2
+
+choice
+	prompt "FDCAN Loopback Mode"
+	depends on STM32H7_FDCAN_LOOPBACK
+	default STM32H7_FDCAN_LOOPBACK_INTERNAL
+
+config STM32H7_FDCAN_LOOPBACK_INTERNAL
+	bool "Internal loopback mode"
+	---help---
+		Enable internal loopback mode, where both Tx and Rx are
+		disconnected from the CAN bus.  This can be used for a "Hot Selftest",
+		meaning the FDCAN can be used without affecting a running CAN bus.
+
+		All transmitted frames are treated as received frames and processed
+		accordingly.
+
+config STM32H7_FDCAN_LOOPBACK_EXTERNAL
+	bool "External loopback mode"
+	---help---
+		Enable external loopback mode, where the Rx pin is disconnected from
+		the CAN bus but the Tx pin remains connected.
+
+		All transmitted frames are treated as received frames and processed
+		accordingly.
+
+endchoice # CAN Loopback Mode
+
+endmenu # FDCAN Driver
 
 
 endif # ARCH_CHIP_STM32H7
